--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "config atguigu info for dev(master) O(∩_∩)ORefreshScope O(∩_∩)ORefreshScope" 
+  info: "config atguigu info for dev(master) 20398023984" 
