--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master 主要分支哈哈,springcloud-config/config-dev.yml" 
+  info: "master branch ,springcloud-config/config-dev.yml,     age = 22" 
